# rust-Prizm230

./: .gitignore
modbus_prizm230/: Cargo.toml
modbus_prizm230/src/: main.rs
